--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-router-prompt": "^0.8.0",
     "yup": "^1.7.0"
   },
   "devDependencies": {
