--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
     "formik": "^2.4.6",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "react-router-prompt": "^0.8.0",
+    "reactstrap": "^9.2.3",
     "yup": "^1.7.0"
   },
   "devDependencies": {
